fix: evolutionary architects on habs

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -292,7 +292,7 @@
 	concept_tec_research_building_icon: "£amenities£ Research Building"
 	concept_tec_research_buildings: "Research Buildings"
 	concept_tec_research_buildings_icon: "£amenities£ Research Buildings"
-	concept_tec_research_building_desc: "Research Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_research$§! Jobs such as ['concept_tec_specialist_job_researcher_plural_icon'], ['concept_tec_specialist_job_alculator_plural_icon'] or ['concept_tec_specialist_job_tec_brain_drone_plural_icon'].\n\n$concept_tec_research_building$:\n$t$- ['building:building_research_lab_1']\n$t$- ['building:building_tec_biohive_research_lab_1']"
+	concept_tec_research_building_desc: "Research Buildings are §Y£building£ Buildings§! that give §Y$tec_loc_research$§! Jobs such as ['concept_tec_specialist_job_researcher_plural_icon'], ['concept_tec_specialist_job_calculator_plural_icon'] or ['concept_tec_specialist_job_brain_drone_plural_icon'].\n\n$concept_tec_research_building$:\n$t$- ['building:building_research_lab_1']\n$t$- ['building:building_tec_biohive_research_lab_1']"
 
 
 	concept_tec_amenity_building: "Amenity Building"
@@ -1469,6 +1469,18 @@
 	concept_tec_specialist_job_artisan_drone_plural: "$job_artisan_drone_plural$"
 	concept_tec_specialist_job_artisan_drone_plural_icon: "£job_artisan_drone£ $job_artisan_drone_plural$"
 	concept_tec_specialist_job_artisan_drone_desc: "§L$job_artisan_drone_desc$§!\n\n$job_artisan_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_artisans_alias']\n\n$tec_loc_c_produces$: §Y£consumer_goods£ 6§!\n$tec_loc_c_upkeep$: §Y£minerals£ 6§!"
+
+	concept_tec_specialist_job_trader: "$job_trader$"
+	concept_tec_specialist_job_trader_icon: "£job_overlord_trader£ $job_trader$"
+	concept_tec_specialist_job_trader_plural: "$job_trader_plural$"
+	concept_tec_specialist_job_trader_plural_icon: "£job_overlord_trader£ $job_trader_plural$"
+	concept_tec_specialist_job_trader_desc: "§L$job_trader_desc$§!\n\n$job_trader_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_traders']\n\n$tec_loc_trade_value$: §G+8§!\n$tec_loc_trade_value$: §G+1%§!\n$tec_loc_c_upkeep$: §Y£consumer_goods£ 1§!"
+
+	concept_tec_specialist_job_tec_trade_drone: "$job_tec_trade_drone$"
+	concept_tec_specialist_job_tec_trade_drone_icon: "£job_tec_trade_specialist£ $job_tec_trade_drone$"
+	concept_tec_specialist_job_tec_trade_drone_plural: "$job_tec_trade_drone_plural$"
+	concept_tec_specialist_job_tec_trade_drone_plural_icon: "£job_tec_trade_specialist£ $job_tec_trade_drone_plural$"
+	concept_tec_specialist_job_tec_trade_drone_desc: "§L$job_tec_trade_drone_desc$§!\n\n$job_tec_trade_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_tec_trade_drones']\n\n$tec_loc_trade_value$: §G+12§!\n$tec_loc_c_upkeep$: §Y£energy£ 2§!"
 
 	concept_tec_worker_job_tec_state_worker: "$job_tec_state_worker$"
 	concept_tec_worker_job_tec_state_worker_icon: "£job_tec_state_worker£ $job_tec_state_worker$"
