fix: hive world assembly districts, more job concepts and tags

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1181,16 +1181,16 @@ l_english:
 # ------------------------------------------------------------
  # ------------------------------------------------- Competitive (entepreneur)
 	building_tec_entepre_forge:0 "Private Forge"
-	building_tec_entepre_forge_desc:0 "§EEntepreneur Building§!\n\nAn alloy-centered company private building, with granted permission from the empire in order to expand its activities at a planet state."
+	building_tec_entepre_forge_desc:0 "['concept_tec_ethic_building_entrepreneur_alias']\n\nAn alloy-centered company private building, with granted permission from the empire in order to expand its activities at a planet state."
 
 	building_tec_entepre_factory:0 "Private Factories"
-	building_tec_entepre_factory_desc:0 "§EEntepreneur Building§!\n\nFocused on creating the best consumer goods, a private company made its flagship on this planet, with this private building."
+	building_tec_entepre_factory_desc:0 "['concept_tec_ethic_building_entrepreneur_alias']\n\nFocused on creating the best consumer goods, a private company made its flagship on this planet, with this private building."
 
 	building_tec_entepre_research:0 "Private Research Labs"
-	building_tec_entepre_research_desc:0 "§EEntepreneur Building§!\n\nLicensed to provide the best technological output while also swimming in benefits, a private lab founded these installations with the consent of the empire."
+	building_tec_entepre_research_desc:0 "['concept_tec_ethic_building_entrepreneur_alias']\n\nLicensed to provide the best technological output while also swimming in benefits, a private lab founded these installations with the consent of the empire."
 
 	building_tec_entepre_theatres:0 "Private Entertainment System"
-	building_tec_entepre_theatres_desc:0 "§EEntepreneur Building§!\n\nWhen it comes to entertain and commodities, this company provides the best possible installations for this planet inhabitants."
+	building_tec_entepre_theatres_desc:0 "['concept_tec_ethic_building_entrepreneur_alias']\n\nWhen it comes to entertain and commodities, this company provides the best possible installations for this planet inhabitants."
 
 
 	job_tec_hired_farmer:0 "Hired Farmer"
@@ -3795,11 +3795,11 @@ l_english:
 	tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab:0 "§HDue to insufficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
 # Scripted modifiers
 
-	private_hired: "Private/Hired"
+	tec_private_hired: "Private/Hired"
 
-	mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_hired$ Jobs"
-	mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
-	mod_tec_hired_job_trade_add: "$tec_loc_trade_value$ from £job£ $private_hired$ Jobs"
+	mod_tec_hired_job_base_production_mult: "Base Production from £job£ $tec_private_hired$ Jobs"
+	mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $tec_private_hired$ Jobs"
+	mod_tec_hired_job_trade_add: "$tec_loc_trade_value$ from £job£ $tec_private_hired$ Jobs"
 
 	mod_tec_branch_building_base_production_mult: "Base Production from $BRANCH_OFFICE_BUILDINGS$"
 
