--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -64,6 +64,9 @@ l_english:
 	mod_housing_district_housing_add: "$tec_loc_housing$ from ['concept_tec_housing_district', [TecGetHousingDistrict]] Districts"
 	mod_housing_district_amenities_add: "$tec_loc_amenities_generic$ from ['concept_tec_housing_district', [TecGetHousingDistrict]] Districts"
 
+	mod_tec_job_hired_tag: "['concept_tec_hired_jobs', $tec_private_hired$ Job]"
+	mod_tec_job_hired_tag_short: ""
+
 	tec_housing_city: "City"
 	tec_housing_hive: "Hive"
 	tec_housing_nexus: "Nexus"
