--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -35477,45 +35477,45 @@
  mod_planet_industrial_jobs_all_industrial_upkeep_add: "$mod_planet_industrial_jobs_all_industrial_upkeep_mult$"
  mod_planet_industrial_jobs_all_basic_upkeep_add: "$mod_planet_industrial_jobs_all_basic_upkeep_mult$"
 
- # planet_jobs_tec_hired - £job£ $private_hired$ Jobs
- mod_base_planet_jobs_tec_hired: "£job£ $private_hired$ Jobs"
+ # planet_jobs_tec_hired - £job£ $tec_private_hired$ Jobs
+ mod_base_planet_jobs_tec_hired: "£job£ $tec_private_hired$ Jobs"
  tec_economic_category_planet_jobs_tec_hired_tag: "§EEconomic Category: ['concept_tec_eco_planet_jobs_tec_hired_alias']§! ['concept_tec_economic_category_pin_icon']"
  mod_tec_economic_category_planet_jobs_tec_hired_tag: "$tec_economic_category_planet_jobs_tec_hired_tag$"
  mod_tec_economic_category_planet_jobs_tec_hired_tag_short: "$tec_blank$"
 
- mod_planet_jobs_tec_hired_produces_mult: "£job£ $private_hired$ Jobs Output"
- mod_planet_jobs_tec_hired_upkeep_mult: "£job£ $private_hired$ Jobs Upkeep"
+ mod_planet_jobs_tec_hired_produces_mult: "£job£ $tec_private_hired$ Jobs Output"
+ mod_planet_jobs_tec_hired_upkeep_mult: "£job£ $tec_private_hired$ Jobs Upkeep"
 
- mod_planet_jobs_tec_hired_minerals_produces_mult: "£minerals£ $minerals$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_food_produces_mult: "£food£ $food$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_energy_produces_mult: "£energy£ $energy$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_alloys_produces_mult: "£alloys£ $alloys$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_physics_research_produces_mult: "£physics_research£ $physics_research$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_society_research_produces_mult: "£society_research£ $society_research$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_unity_produces_mult: "£unity£ $unity$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_influence_produces_mult: "£influence£ $influence$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_nanites_produces_mult: "£nanites£ $nanites$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_biomass_produces_mult: "£sr_tec_biomass£ $sr_tec_biomass$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_machine_processing_local_produces_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_machine_processing_empire_produces_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_machine_processing_redirection_produces_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_ai_unobtainium_produces_mult: "£ai_unobtainium£ $ai_unobtainium$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_pop_growth_produces_mult: "$tec_loc_pop_growth$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_biological_assembly_produces_mult: "$tec_loc_organic_assembly$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_assembly_produces_mult: "$tec_loc_assembly$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_all_research_produces_mult: "$tec_loc_research_resources$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_all_basic_produces_mult: "$tec_loc_basic_resources$ from £job£ $private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_minerals_produces_mult: "£minerals£ $minerals$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_food_produces_mult: "£food£ $food$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_energy_produces_mult: "£energy£ $energy$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_alloys_produces_mult: "£alloys£ $alloys$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_physics_research_produces_mult: "£physics_research£ $physics_research$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_society_research_produces_mult: "£society_research£ $society_research$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_unity_produces_mult: "£unity£ $unity$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_influence_produces_mult: "£influence£ $influence$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_nanites_produces_mult: "£nanites£ $nanites$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_biomass_produces_mult: "£sr_tec_biomass£ $sr_tec_biomass$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_machine_processing_local_produces_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_machine_processing_empire_produces_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_machine_processing_redirection_produces_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_ai_unobtainium_produces_mult: "£ai_unobtainium£ $ai_unobtainium$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_pop_growth_produces_mult: "$tec_loc_pop_growth$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_biological_assembly_produces_mult: "$tec_loc_organic_assembly$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_assembly_produces_mult: "$tec_loc_assembly$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_all_research_produces_mult: "$tec_loc_research_resources$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_all_basic_produces_mult: "$tec_loc_basic_resources$ from £job£ $tec_private_hired$ Jobs"
 
  mod_planet_jobs_tec_hired_minerals_produces_add: "$mod_planet_jobs_tec_hired_minerals_produces_mult$"
  mod_planet_jobs_tec_hired_food_produces_add: "$mod_planet_jobs_tec_hired_food_produces_mult$"
@@ -35541,43 +35541,43 @@
  mod_planet_jobs_tec_hired_sr_tec_machine_processing_empire_produces_add: "$mod_planet_jobs_tec_hired_sr_tec_machine_processing_empire_produces_mult$"
  mod_planet_jobs_tec_hired_sr_tec_machine_processing_redirection_produces_add: "$mod_planet_jobs_tec_hired_sr_tec_machine_processing_redirection_produces_mult$"
  mod_planet_jobs_tec_hired_ai_unobtainium_produces_add: "$mod_planet_jobs_tec_hired_ai_unobtainium_produces_mult$"
- mod_planet_jobs_tec_hired_amenities_produces_add: "$tec_loc_amenities$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_stability_produces_add: "$tec_loc_stability$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_trade_value_produces_add: "$tec_loc_trade_value$ from £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_edict_funds_produces_add: "$tec_loc_edict_funds$ from £job£ $private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_amenities_produces_add: "$tec_loc_amenities$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_stability_produces_add: "$tec_loc_stability$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_trade_value_produces_add: "$tec_loc_trade_value$ from £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_edict_funds_produces_add: "$tec_loc_edict_funds$ from £job£ $tec_private_hired$ Jobs"
  mod_planet_jobs_tec_hired_biological_assembly_produces_add: "$mod_planet_jobs_tec_hired_biological_assembly_produces_mult$"
  mod_planet_jobs_tec_hired_assembly_produces_add: "$mod_planet_jobs_tec_hired_assembly_produces_mult$"
  mod_planet_jobs_tec_hired_all_research_produces_add: "$mod_planet_jobs_tec_hired_all_research_produces_mult$"
  mod_planet_jobs_tec_hired_all_industrial_produces_add: "$mod_planet_jobs_tec_hired_all_industrial_produces_mult$"
  mod_planet_jobs_tec_hired_all_basic_produces_add: "$mod_planet_jobs_tec_hired_all_basic_produces_mult$"
 
- mod_planet_jobs_tec_hired_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_food_upkeep_mult: "£food£ $food$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_energy_upkeep_mult: "£energy£ $energy$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_unity_upkeep_mult: "£unity£ $unity$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_influence_upkeep_mult: "£influence£ $influence$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_biomass_upkeep_mult: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_machine_processing_local_upkeep_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_machine_processing_empire_upkeep_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_sr_tec_machine_processing_redirection_upkeep_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_ai_unobtainium_upkeep_mult: "£ai_unobtainium£ $ai_unobtainium$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of £job£ $private_hired$ Jobs"
- mod_planet_jobs_tec_hired_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of £job£ $private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_food_upkeep_mult: "£food£ $food$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_energy_upkeep_mult: "£energy£ $energy$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_unity_upkeep_mult: "£unity£ $unity$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_influence_upkeep_mult: "£influence£ $influence$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_biomass_upkeep_mult: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_machine_processing_local_upkeep_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_machine_processing_empire_upkeep_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_sr_tec_machine_processing_redirection_upkeep_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_ai_unobtainium_upkeep_mult: "£ai_unobtainium£ $ai_unobtainium$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of £job£ $tec_private_hired$ Jobs"
+ mod_planet_jobs_tec_hired_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of £job£ $tec_private_hired$ Jobs"
 
  mod_planet_jobs_tec_hired_minerals_upkeep_add: "$mod_planet_jobs_tec_hired_minerals_upkeep_mult$"
  mod_planet_jobs_tec_hired_food_upkeep_add: "$mod_planet_jobs_tec_hired_food_upkeep_mult$"
