--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -286,6 +286,14 @@
 	tec_loc_situation:0 "Situation"
 	tec_loc_situation_icon:0 "£stability£"
 
+	tec_loc_pop_cat_ruler: "£pop_cat_ruler£ $pop_cat_ruler$"
+	tec_loc_pop_cat_specialist: "£pop_cat_specialist£ $pop_cat_specialist$"
+	tec_loc_pop_cat_worker: "£pop_cat_worker£ $pop_cat_worker$"
+	tec_loc_pop_cat_prime_drone: "£pop_cat_tec_prime_drone£ $pop_cat_tec_prime_drone$"
+	tec_loc_pop_cat_brood_drone: "£pop_cat_tec_brood_drone£ $pop_cat_tec_brood_drone$"
+	tec_loc_pop_cat_complex_drone: "£pop_cat_complex_drone£ $pop_cat_complex_drone$"
+	tec_loc_pop_cat_simple_drone: "£pop_cat_simple_drone£ $pop_cat_simple_drone$"
+
  # Espionage
 	tec_loc_espionage_interdiction_icon:0 "£trigger_tec_espionage_interdiction£"
 	tec_loc_espionage_interdiction:0 "$tec_loc_espionage_interdiction_icon$ Operation Interdiction"
