fix: errors in scripted locs and elysium district fix

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -362,7 +362,7 @@ l_english:
 		job_tec_resonance_drone:0 "Resonance Drone"
 		job_tec_resonance_drone_plural:0 "Resonance Drones"
 		job_tec_resonance_drone_desc:0 "As embodiment of the thoughts of the collective itself, these drones filter and amplify the ceaseless stream of them redirected to each single member of the whole Hive Mind."
-		job_tec_resonance_drone_effect_desc:0 "£job_tec_resonance_drone£ $job_tec_resonance_drone_plural$ turn $tec_loc_energy$ and [Owner.tec_synapse_drone_upkeep] into §Y$tec_loc_unity$§! and £mod_country_edict_fund_add£ §YEdict Capacity§!."
+		job_tec_resonance_drone_effect_desc:0 "£job_tec_resonance_drone£ $job_tec_resonance_drone_plural$ turn $tec_loc_energy$ and [tec_synapse_drone_upkeep] into §Y$tec_loc_unity$§! and £mod_country_edict_fund_add£ §YEdict Capacity§!."
 		mod_job_tec_resonance_drone_add:0 "$job_tec_resonance_drone$ Jobs"
 		mod_job_tec_resonance_drone_per_pop:0 "§G+1§! $job_tec_resonance_drone$ Job per $VALUE$ Pops"
 		mod_job_tec_resonance_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_resonance_drone_add£ per $VALUE$ £pop£"
@@ -371,7 +371,7 @@ l_english:
 		job_tec_podtender_drone:0 "Podtender Drone"
 		job_tec_podtender_drone_plural:0 "Podtender Drones"
 		job_tec_podtender_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
-		job_tec_podtender_drone_effect_desc:0 "£job_tec_podtender_drone£ $job_tec_podtender_drone_plural$ assemble new drone £pop£ §YPops§! with [Owner.tec_podtender_drone_upkeep]."
+		job_tec_podtender_drone_effect_desc:0 "£job_tec_podtender_drone£ $job_tec_podtender_drone_plural$ assemble new drone £pop£ §YPops§! with [tec_podtender_drone_upkeep]."
 		mod_job_tec_podtender_drone_add:0 "$job_tec_podtender_drone$ Jobs"
 		mod_job_tec_podtender_drone_per_pop:0 "§G+1§! $job_tec_podtender_drone$ Job per $VALUE$ Pops"
 		mod_job_tec_podtender_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_podtender_drone_add£ per $VALUE$ £pop£"
@@ -447,7 +447,7 @@ l_english:
 		job_tec_development_drone:0 "Development Drone"
 		job_tec_development_drone_plural:0 "Development Drones"
 		job_tec_development_drone_desc:0 "The physical manifestation of a neurocomputer, these drones focus on adding different focus and thoughts to the overmind's, avoiding a feedback loop of its signals and processes as a creative way of innovation."
-		job_tec_development_drone_effect_desc:0 "£job_tec_development_drone£ $job_tec_development_drone_plural$ turn $tec_loc_energy$ and [Owner.tec_synapse_drone_upkeep] into §Y$tec_loc_unity$§!."
+		job_tec_development_drone_effect_desc:0 "£job_tec_development_drone£ $job_tec_development_drone_plural$ turn $tec_loc_energy$ and [tec_synapse_drone_upkeep] into §Y$tec_loc_unity$§!."
 		mod_job_tec_development_drone_add:0 "$job_tec_development_drone$ Jobs"
 		mod_job_tec_development_drone_per_pop:0 "§G+1§! $job_tec_development_drone$ Job per $VALUE$ Pops"
 		mod_job_tec_development_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_development_drone_add£ per $VALUE$ £pop£"
