--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -90,11 +90,11 @@
 
 	job_synapse_drone_effect_desc:4 "£job_synapse_drone£ $job_synapse_drone_plural$ turn §Y$tec_loc_energy$§! and [Owner.GetTecSynapseDroneUpkeep] into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_funds$§!."
 
-	job_brain_drone_effect_desc:0 "£job_brain_drone£ $job_brain_drone_plural$ turn [owner.GetTecBrainDroneUpkeep] into §Y$tec_loc_research_resources$§! for new technologies"
+	job_brain_drone_effect_desc:0 "£job_brain_drone£ $job_brain_drone_plural$ turn [tec_brain_drone_upkeep] into §Y$tec_loc_research_resources$§! for new technologies"
 
 	job_spawning_drone_effect_desc:2 "[job_spawning_drone_effect_desc]"
-	job_spawning_drone_effect_default_desc: "£job_spawning_drone£ $job_spawning_drone_plural$ convert [Owner.tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and §Y$tec_loc_organic_assembly$§!"
-	job_spawning_drone_necrophage_effect_desc:0 "£job_spawning_drone£ $job_spawning_drone_plural$ convert [Owner.tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, §Y$tec_loc_organic_assembly$§! and £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!"
+	job_spawning_drone_effect_default_desc: "£job_spawning_drone£ $job_spawning_drone_plural$ convert [tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and §Y$tec_loc_organic_assembly$§!"
+	job_spawning_drone_necrophage_effect_desc:0 "£job_spawning_drone£ $job_spawning_drone_plural$ convert [tec_spawning_drone_upkeep] into £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!, §Y$tec_loc_organic_assembly$§! and £mod_pop_growth_speed£ §Y$MOD_POP_GROWTH_SPEED$§!"
 
 	job_criminal_effect_desc: "£job_criminal£ $job_criminal_plural$ live outside the bounds of legal society, some by choice and some by circumstance."
 	job_deviant_drone_effect_desc: "£job_criminal£ $job_deviant_drone_plural$ no longer obey the Hive Mind."
@@ -115,7 +115,7 @@
 	job_roboticist_effect_desc:0 "£job_roboticist£ $job_roboticist_plural$ turn [root.tec_roboticist_upkeep] into new £pop£ §YRobot Pops§!"
 
 	job_culture_worker_effect_desc:0 "£job_culture_worker£ $job_culture_worker_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!$tec_culture_worker_cleanup$ and £mod_ethic_attraction_mult£ §Y$MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$§!."
-	tec_culture_worker_cleanup:0 "[Owner.tec_cw_mat_bonus][Owner.tec_cw_mil_bonus][Owner.tec_cw_auth_bonus][Owner.tec_cw_xen_bonus][Owner.tec_cw_eco_bonus][Owner.tec_cw_comp_bonus][Owner.tec_cw_eli_bonus]"
+	tec_culture_worker_cleanup:0 "[tec_cw_mat_bonus][tec_cw_mil_bonus][tec_cw_auth_bonus][tec_cw_xen_bonus][tec_cw_eco_bonus][tec_cw_comp_bonus][tec_cw_eli_bonus]"
 	tec_cw_mat_bonus_desc:0 ", §Y$tec_loc_edict_funds$§!"
 	tec_cw_spi_bonus_desc:0 ", §Y$mod_planet_pops_upkeep_mult$ Reduction§!"
 	tec_cw_mil_bonus_desc:0 ", §Y$tec_loc_naval_cap$§!"
@@ -138,7 +138,7 @@
 	job_chronicle_drone_effect_desc_civic:2 "£job_chronicle_drone£ $job_chronicle_drone_plural$ turn §Y$tec_loc_energy$§! and §Y$tec_loc_minerals$§! into §Y$tec_loc_unity$§!, $tec_loc_society$, bonuses based on the gestalt §YMotivations§! and §Y$tec_loc_stability$§!"
 	job_evaluator_effect_desc:0 "£job_evaluator£ $job_evaluator_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_evaluator_cleanup$ and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
 	job_evaluator_effect_desc_civic:0 "£job_evaluator£ $job_evaluator_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§!."
-	tec_evaluator_cleanup:0 "[Owner.tec_ev_eco_bonus][Owner.tec_ev_relation_bonus][Owner.tec_ev_ego_bonus]"
+	tec_evaluator_cleanup:0 "[tec_ev_eco_bonus][tec_ev_relation_bonus][tec_ev_ego_bonus]"
 	tec_ev_overconsumption_bonus_desc:0 ", §Yavailable $tec_loc_housing$§!"
 	tec_ev_preservation_bonus_desc:0 ", §Y$tec_loc_amenities_gestalt$§!"
 	tec_ev_empathy_bonus_desc:0 ", §Y£pop£ Menial and Free individuals output§!"
