--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2846,7 +2846,7 @@
 	concept_tec_tech_robomodding_desc: "$concept_tec_tech_robomodding_effect$\n\n§L$tech_robomodding_desc$§!"
 
 	concept_tec_tech_powered_exoskeletons: "£engineering£ $tech_powered_exoskeletons$"
-	concept_tec_tech_powered_exoskeletons_effect: "- $MOD_ARMY_DAMAGE_MULT$: §G+5%§!\n- Worker Pop Resource Output: §G+5%§!"
+	concept_tec_tech_powered_exoskeletons_effect: "- $MOD_ARMY_DAMAGE_MULT$: §G+5%§!\n- Worker Pop £job£ Jobs Output: §G+5%§!"
 	concept_tec_tech_powered_exoskeletons_desc: "$concept_tec_tech_powered_exoskeletons_effect$\n\n§L$tech_powered_exoskeletons_desc$§!"
 
 	concept_tec_tech_robotic_workers: "£engineering£ $tech_robotic_workers$"
