feat: split lithic idyll into its own civic

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -183,6 +183,9 @@
 	concept_tec_brood_add_civics: "Cerebrate Civics"
 	concept_tec_brood_add_civic_desc: "TO DO"
 
+	concept_tec_agrarian_idyll_civic: "$civic_agrarian_idyll$"
+	concept_tec_agrarian_idyll_civic_desc: "$concept_tec_agrarian_idyll_civic$ Civics consist of \n- ['civic:civic_agrarian_idyll']$NEW_LINE$- ['civic:civic_tec_regular_agrarian_idyll_lithoid']"
+
 	concept_tec_main_cult_civic: "Main Cult Civic"
 	concept_tec_main_cult_civics: "Main Cult Civics"
 	concept_tec_main_cult_civic_desc: "Main cult civics are mutually exclusive, replacing your priests and temples with swapped variants.\n\nThey can be combined with ['concept_tec_secondary_cult_civic'] and ['concept_tec_tertiary_cult_civics']!\n\n$concept_tec_main_cult_civics$ consist of \n- ['civic:civic_death_cult']\n- ['civic:civic_death_cult_corporate']\n- ['civic:civic_tec_regular_machine_cult']\n- ['civic:origin_cybernetic_creed']"
