genetic finisher loc issue + tradition qol thing

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -136,7 +136,8 @@
 	tr_genetics_finish:0 "Genetic Traditions Finished"
 
 	tr_genetics_finish_extra_traits:0 "$tr_genetics_finish$"
-	tr_genetics_finish_extra_traits_tooltip:1 "Allows research of rare §YTransgenesis§! technologies\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-25%§!\n$TRADITIONS_FINISH_AP$"
+	tr_genetics_finish_extra_traits_tooltip:1 "Allows research of rare §YTransgenesis§! technologies"
+	# \n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-25%§!\n$TRADITIONS_FINISH_AP$
 
 	tr_genetics_resequencing:0 "Genetic Resequencing"
 	tr_genetics_resequencing_tooltip:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species"
