fix: housing tech description

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -73,7 +73,7 @@ l_english:
 	tec_housing_biohive: "Habitation Nest"
 	tec_housing_habitat: "Habitation"
 	tec_housing_default: "Housing"
-	district_housing_tech_effect: "$tec_loc_housing$ from ['concept_tec_housing_district', $tec_housing_default$]: §G+1§!"
+	district_housing_tech_effect: "$tec_loc_housing$ from ['concept_tec_housing_district', $tec_housing_default$] Districts: §G+1§!"
  # /
 # /
 
